--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -70,6 +70,7 @@
             <resource>
                 <excludes>
                     <exclude>../frontend/node_modules/**/*.*</exclude>
+                    <exclude>/frontend/node_modules/**/*.*</exclude>
                 </excludes>
             </resource>
         </resources>
