--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -69,8 +69,9 @@
         <resources>
             <resource>
                 <excludes>
-                    <exclude>../frontend/node_modules/**/*.*</exclude>
-                    <exclude>/frontend/node_modules/**/*.*</exclude>
+                    <exclude>../frontend/node_modules/*</exclude>
+                    <exclude>/frontend/node_modules/*</exclude>
+                    <exclude>**/node_modules/*</exclude>
                 </excludes>
             </resource>
         </resources>
