--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.1",
     "typescript": "~3.7.2",
-    "@material-ui/core": "^4.11.0"
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
