frontend: registration works, but doesn't show error, login works, but login form doesn't close

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -74,9 +74,14 @@
         <resources>
             <resource>
                 <excludes>
-                    <exclude>../frontend/node_modules/*</exclude>
-                    <exclude>/frontend/node_modules/*</exclude>
-                    <exclude>**/node_modules/*</exclude>
+                    <!--<exclude>../frontend/node_modules/*.*</exclude>-->
+                    <exclude>/frontend/node_modules/*.*</exclude>
+                    <exclude>**/node_modules/*.*</exclude>
+
+                   <!-- <exclude>../frontend/node_modules/**</exclude>-->
+                    <exclude>/frontend/node_modules/**</exclude>
+                    <exclude>**/node_modules/**</exclude>
+
                 </excludes>
             </resource>
         </resources>
