--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -75,7 +75,7 @@ http {
         	gzip_comp_level 7;
  		
  		location /api/ {
-	    		proxy_pass http://127.0.0.1:8080;
+	    		proxy_pass http://backend:8080; #http://192.168.99.100:8080;
 	        }   
         
         	location / {
