--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -69,6 +69,11 @@
             <version>2.10.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
