--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
+variables:
+  - MVN_ARGS: "-f backend"
 orbs:
   # The Node.js orb contains a set of prepackaged CircleCI configuration you can utilize
   # Orbs reduce the amount of configuration required for common tasks.
@@ -19,6 +20,7 @@ jobs:
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
     docker:
       - image: cimg/openjdk:14.0
+    working_directory: /tmp
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
@@ -27,11 +29,18 @@ jobs:
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
-          command: mvn -f backend -B -DskipTests clean package
+          command: mvn $MVN_ARGS -B -DskipTests clean package
       # Then run your tests!
       - run:
           name: Test
-          command: mvn -f backend test
+          command: mvn $MVN_ARGS test
+      - run:
+          name: ls
+          command: ls /tmp/safe-storage/target
+      - store_artifacts:
+          path: /tmp/safe-storage/target
+          destination: backend.jar
+
   build-frontend:
     # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
